rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__member_expressions_on_views__many_to_one_view_patched_measure_filter.snap
---
source: cubesqlplanner/src/tests/member_expressions_on_views.rs
expression: result
---
filtered_root_sum
-----------------
30.00
